# erancihan

./: .gitignore  .gitmodules  README.md
.contributions/: gitlab.json
.githooks/: pre-push
.github/workflows/: expense-analysis-tests.yml  pages.yml  release.yml  stats.yml  trading-bot-ci.yml  update-submodules.yml
antigravity-parallel-agents/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
antigravity-parallel-agents/docs/: PLAN.md
antigravity-parallel-agents/examples/: tasks.txt  tasks.yaml
antigravity-parallel-agents/extension/: README.md  extension.ts  lanesPanel.ts  orchestratorFactory.ts  tsconfig.json
antigravity-usage-monitor/: extension.js  package.json
browser-extensions/aether-downloader/: .gitignore  Makefile  RESEARCH.md  ROADMAP.md  build.js  package-lock.json  package.json  vite.config.js
docs/: CNAME  index.md
dotfiles/: .gitconfig  .zshrc  install.sh
guides/: README.md
guides/container-from-scratch/: README.md
guides/coop-soulslike-ue5/: 01-project-setup.md  02-multiplayer-foundations.md  03-sessions-and-joining.md  04-character-locomotion.md  05-stats-and-damage.md  06-melee-combat.md  07-lock-on.md  08-enemy-ai.md  09-boss.md  10-bonfires-death-souls.md  11-coop-polish.md  12-packaging-and-beyond.md  README.md  resources.md
guides/fpga-without-the-fpga/: README.md
guides/huffman-coding/: README.md
guides/space-fighter-metal/: README.md  resources.md
guides/space-fighter-vulkan/: README.md  resources.md
guides/space-impact-pixijs/: README.md  resources.md
guides/topdown-arpg-ue5/: 01-project-setup.md  README.md  (+13 more)
playground/: .gitignore  README.md
playground/cpp/GL/dx-learning/: CMakeLists.txt
playground/cpp/GL/dx-learning/src/: DXHelpers.h  Win32Application.cpp  Win32Application.h  d3dx12.h
playground/cpp/GL/dx-learning/src/a/: a.cpp  a.h
playground/cpp/GL/dx-learning/src/info/: print_graphics_cards_info.cpp
playground/cpp/GL/dx-learning/src/window/: Core.cpp  Core.h
playground/graphics/d3d12/helloWindow/: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  main.cpp
playground/graphics/d3d12/helloWindow/src/: main.cpp
playground/graphics/d3d12/helloWindow/src/info/: print_graphics_cards_info.h
playground/graphics/d3d12/helloWindow/src/window/: Window.h
playground/graphics/rendering-graphics/: CMakeLists.txt
playground/graphics/rendering-graphics/src/WindowRenderer/: WindowRender.cpp  WindowRender.h  WindowRender.linux.cpp  WindowRender.win.cpp
playground/negotiation-ecs/visualizer-rust/: Cargo.toml  build.rs
playground/negotiation-ecs/visualizer-rust/src/: main.rs  network.rs  state.rs
playground/negotiation-ecs/visualizer-rust/src/ui/: canvas.rs  logs.rs  mod.rs  stats.rs
playground/python/cults3d-download/: .gitignore  main.py  pyproject.toml
playground/python/mel-spectrogram/: .gitignore  main.py  pyproject.toml
playground/python/social-network-graph/: graph.html  main.py  pyproject.toml
trading-bot/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.example.yaml  pyproject.toml
trading-bot/.claude/skills/add-arena-algo/: SKILL.md
trading-bot/.claude/skills/add-strategy/: SKILL.md
trading-bot/.claude/skills/tradebot-dev/: SKILL.md
trading-bot/algos/: README.md  buy_and_hold.py  rsi_dip.py  sma_trend.py
trading-bot/frontend/: esbuild.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
trading-bot/frontend/src/: alpine.ts  main.ts  sse.ts  types.ts
trading-bot/frontend/src/api/: client.ts
trading-bot/frontend/src/charts/: candleChart.ts  equityChart.ts  theme.ts
trading-bot/frontend/src/components/: accountHeader.ts  arena.ts  candleChart.ts  dashboard.ts  jobRunner.ts  partialLoader.ts  seasonChart.ts
trading-bot/frontend/src/styles/: app.css
trading-bot/scenarios/: alpaca_spy.yaml  default.yaml
trading-bot/tests/: test_arena_league.py  test_arena_loader.py  test_arena_market.py  test_arena_runner.py  test_arena_sandbox.py  test_arena_scenario.py  test_arena_scoring.py  test_arena_season.py  test_arena_simulation.py  test_arena_store.py  test_arena_tournament.py  test_backtest.py  test_config.py  test_data_cache.py  test_dryrun.py  test_indicators.py  test_portfolio.py  test_risk.py  test_storage.py  test_strategies.py  test_web.py  test_web_jobs.py
trading-bot/tradebot/: __init__.py  backtest.py  cli.py  config.py  engine.py  indicators.py  models.py  portfolio.py  risk.py  storage.py
trading-bot/tradebot/arena/: __init__.py  adapters.py  api.py  contestant.py  interfaces.py  league.py  loader.py  market.py  result.py  runner.py  sandbox.py  scenario.py  scoring.py  season.py  simulation.py  store.py  tournament.py
trading-bot/tradebot/broker/: __init__.py  alpaca_broker.py  base.py  dryrun.py
trading-bot/tradebot/data/: __init__.py  alpaca_data.py  cache.py  replay.py  synthetic.py
trading-bot/tradebot/strategies/: __init__.py  base.py  registry.py  rsi_reversion.py  sma_crossover.py
trading-bot/tradebot/web/: __init__.py  app.py  dependencies.py  repository.py  schemas.py  server.py
trading-bot/tradebot/web/routes/: __init__.py  api.py  pages.py  partials.py  sse.py
trading-bot/tradebot/web/services/: __init__.py  account_service.py  jobs_service.py  metrics_service.py
trading-bot/tradebot/web/templates/: base.html
trading-bot/tradebot/web/templates/components/: leaderboard_table.html  macros.html  nav.html  orders_table.html  positions_table.html  season_standings.html  stats.html
trading-bot/tradebot/web/templates/pages/: arena.html  chart.html  dashboard.html  run.html  seasons.html
website/: .gitignore  Makefile  config.toml
(+742 files in other folders)
