[project]
name = "mel-spectogram"
version = "0.1.0"
description = ""
authors = [
    {name = "Cihan Eran",email = "erancihan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa (>=0.11.0,<0.12.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
