[project]
name = "social-network-graph"
version = "0.1.0"
description = ""
authors = [
    {name = "Cihan Eran",email = "erancihan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx (>=3.5,<4.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "graphviz (>=0.21,<0.22)",
    "pyvis (>=0.3.2,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
